//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table ClicPage {
  id Int [pk, increment]
  nid Int [not null]
  title String [not null]
  content String [not null]
  topic String [not null]
  languageCode String [not null]
  url String [not null]
  path String [not null]
  contextualInformation String [not null]
  lastUpdatedAt DateTime [not null]
  referencingPages ClicPage [not null]
  referencedByPages ClicPage [not null]
  referencingLegislationSections LegislationSection [not null]
  referencingLegislationCaps LegislationCap [not null]
  referencingJudgments Judgment [not null]
  chunks clic_chunks [not null]

  indexes {
    (nid, languageCode) [unique]
  }
}

Table LegislationSection {
  id Int [pk, increment]
  path String [not null]
  parentLegislationCap LegislationCap [not null]
  capNumber String [not null]
  sectionHeading String
  sectionNumber String [not null]
  subsectionNumber String
  content String [not null]
  languageCode String [not null]
  url String [not null]
  eLegislationUrl String
  referencedByClicPages ClicPage [not null]
  referencingLegislationSections LegislationSection [not null]
  referencedByLegislationSections LegislationSection [not null]
  referencingLegislationCaps LegislationCap [not null]
  referencedByJudgments Judgment [not null]
  relatedInterpretations Interpretation [not null]

  indexes {
    (id, languageCode) [unique]
  }
}

Table LegislationCap {
  id Int [pk, increment]
  capNumber String [not null]
  title String
  longTitle String
  languageCode String [not null]
  url String [not null]
  eLegislationUrl String
  updatedAt DateTime [not null]
  childSections LegislationSection [not null]
  referencedByLegislationSections LegislationSection [not null]
  referencedByJudgments Judgment [not null]
  relatedInterpretations Interpretation [not null]
  referencedByClicPages ClicPage [not null]

  indexes {
    (capNumber, languageCode) [unique]
  }
}

Table Interpretation {
  id Int [pk, increment]
  term String [not null]
  termDefinition String [not null]
  languageCode String [not null]
  parentLegislationCap LegislationCap [not null]
  capNumber String [not null]
  sectionsContainingTerm LegislationSection [not null]
}

Table Judgment {
  id Int [pk]
  neutralCitation String [not null]
  courtName String [not null]
  year Int [not null]
  number Int [not null]
  date DateTime [not null]
  languageCode String [not null]
  isTranslation Boolean [not null]
  coram String
  parties String
  representations String
  charges String
  remarks String
  summary String
  summarySource String
  legalrefUrl String [not null]
  url String [not null]
  citationIndex Int
  inTextbook Boolean [not null, default: false]
  cases Case [not null]
  referencedByClicPages ClicPage [not null]
  referencingLegislationSections LegislationSection [not null]
  referencingLegislationCaps LegislationCap [not null]
  referencingJudgments Judgment [not null]
  referencedByJudgments Judgment [not null]
  parallelCitations ParallelCitations [not null]
  chunks judgment_chunks [not null]
}

Table ParallelCitations {
  id Int [pk]
  citation String [not null]
  languageCode String [not null]
  judgment Judgment [not null]
  judgmentId Int [not null]
}

Table Case {
  id Int [pk]
  caseAct String [unique, not null]
  actType String [not null]
  year Int [not null]
  number Int [not null]
  title String [not null]
  cjrId Int [not null]
  cjrDis Int [not null]
  judgments Judgment [not null]
}

Table clic_chunks {
  id BigInt [pk, increment]
  nid Int [not null]
  chunkNo Int [not null]
  languageCode String [not null]
  title String [not null]
  content String [not null]
  url String [not null]
  topic String [not null]
  context String
  cjkTokens String
  page ClicPage [not null]

  indexes {
    (nid, languageCode, chunkNo) [unique]
  }
}

Table judgment_chunks {
  id BigInt [pk, increment]
  judgmentId Int [not null]
  chunkNo Int [not null]
  languageCode String [not null]
  neutralCitation String
  courtName String
  year Int
  date DateTime
  parties String
  content String [not null]
  summarySource String
  url String
  cjkTokens String
  judgment Judgment [not null]

  indexes {
    (judgmentId, chunkNo) [unique]
  }
}

Table ClicPageRelationToClicPage {
  referencingpagesId Int [ref: > ClicPage.id]
  referencedbypagesId Int [ref: > ClicPage.id]
}

Table ClicPageToLegislationSection {
  referencinglegislationsectionsId Int [ref: > LegislationSection.id]
  referencedbyclicpagesId Int [ref: > ClicPage.id]
}

Table ClicPageToLegislationCap {
  referencinglegislationcapsId Int [ref: > LegislationCap.id]
  referencedbyclicpagesId Int [ref: > ClicPage.id]
}

Table ClicPageToJudgment {
  referencingjudgmentsId Int [ref: > Judgment.id]
  referencedbyclicpagesId Int [ref: > ClicPage.id]
}

Table LegislationSectionToLegislationSection {
  referencinglegislationsectionsId Int [ref: > LegislationSection.id]
  referencedbylegislationsectionsId Int [ref: > LegislationSection.id]
}

Table LegislationSectionToLegislationCap {
  referencinglegislationcapsId Int [ref: > LegislationCap.id]
  referencedbylegislationsectionsId Int [ref: > LegislationSection.id]
}

Table JudgmentToLegislationSection {
  referencedbyjudgmentsId Int [ref: > Judgment.id]
  referencinglegislationsectionsId Int [ref: > LegislationSection.id]
}

Table InterpretationToLegislationSection {
  relatedinterpretationsId Int [ref: > Interpretation.id]
  sectionscontainingtermId Int [ref: > LegislationSection.id]
}

Table JudgmentToLegislationCap {
  referencedbyjudgmentsId Int [ref: > Judgment.id]
  referencinglegislationcapsId Int [ref: > LegislationCap.id]
}

Table CaseToJudgment {
  casesId Int [ref: > Case.id]
  judgmentsId Int [ref: > Judgment.id]
}

Table JudgmentToJudgment {
  referencingjudgmentsId Int [ref: > Judgment.id]
  referencedbyjudgmentsId Int [ref: > Judgment.id]
}

Ref: LegislationSection.(capNumber, languageCode) > LegislationCap.(capNumber, languageCode) [delete: No Action]

Ref: Interpretation.(capNumber, languageCode) > LegislationCap.(capNumber, languageCode) [delete: No Action]

Ref: ParallelCitations.judgmentId > Judgment.id

Ref: clic_chunks.(nid, languageCode) > ClicPage.(nid, languageCode) [delete: Cascade]

Ref: judgment_chunks.judgmentId > Judgment.id [delete: Cascade]